--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.15",
+		"prisma": "^4.8.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.4"
 	}
